@startuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
title HTTP Layer (Headers, Cookies, Preconditions, Logger hooks)

class CiLess <<functor>> {
  +bool operator()(string a, string b) const
}

class Headers {
  -multimap<string,string,CiLess> map_
  +void add(string k, string v)
  +void append(string k, string v)
  +void set(string k, string v)
  +void set_if_absent(string k, string v)
  +bool has(string k) const
  +bool get_first(string k, out string v) const
  +vector<string> get_all(string k) const
  +void erase(string k)
  +void merge_from(const Headers& src, bool overwrite=false)
  +string serialize() const
}

class CookieJar {
  -map<string,string,CiLess> cookies_
  +void parse_cookie_header(string line)
  +bool get(string name, out string value) const
  +void set(string name, string value)
  +void erase(string name)
  +void clear()
  +void set_cookie_headers(Headers& h, string name, string value, string path, int max_age, bool http_only, bool secure, string same_site)
}

class HttpRequest {
  +string  method
  +string  uri
  +string  path
  +string  query
  +string  http_version
  +Headers headers
  +CookieJar cookies
  +string  session_id
  +vector<char> body
  +bool keep_alive() const
  +bool header_as_size(string k, out size_t v) const
  +string extension() const
}

class HttpResponse {
  +int     status
  +string  reason
  +Headers headers
  +vector<char> body
  +void setStatus(int s, string r)
  +void set_date_now()
  +void set_keep_alive(bool)
  +void set_content_type_from_ext(const ServerConfig&, const string& ext)
}

class HttpPreconditions {
  +bool has_if_match(const Headers&) const
  +bool has_if_none_match(const Headers&) const
  +string if_match(const Headers&) const
  +string if_none_match(const Headers&) const
  +int evaluate(const Headers& reqHs, const string& currentEtag) const
}

' Util references
class StringUtil
class TimeUtil
class ETagUtil

HttpRequest *-- Headers
HttpRequest *-- CookieJar
HttpResponse *-- Headers
CookieJar ..> Headers : adds Set-Cookie
Headers ..> CiLess
HttpPreconditions ..> ETagUtil
HttpRequest ..> StringUtil
HttpResponse ..> TimeUtil
@enduml
